# rag-chatbot

./: .gitignore  README.md  app.py  pyproject.toml  rag.py
chroma/: chroma.sqlite3
data/: Penguins.docx
